# future-vision-ros_nav-2024ynurmvision-2.0

./: .gitignore  CMakeLists.txt  README.md  autoaim.cpp  debug.h
camera/: CMakeLists.txt  GxCamera.cpp  GxCamera.h
detector/: CMakeLists.txt  inference.cpp  inference.h  yolox.cpp
params/: coord_param.yaml
serial/: serial.cpp  serial.h
thread/: thread.cpp  thread.h
tracker/coordsolver/: coordsolver.h
tracker/general/: general.cpp  general.h
tracker/predictor/: kalman.h  predictor.cpp  predictor.h
